loopdowhile.Poucet1.scala.code
while(!sortieTrouvee()){
  var bisc=0
  for(i<-1 to 5){
    avance()
    if (estSurBiscuit()){
      bisc+=1
    }
   if (bisc>=3){
     gauche()
   }
   else{
     droite()
   }
  }
}
if (faceMur()){
  droite()
}
avance()